--- a/OSRS.Dotnet.Tools.csproj
+++ b/OSRS.Dotnet.Tools.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
+    <Title>OSRS.Dotnet.Tools</Title>
+    <Authors>JustinRidings</Authors>
   </PropertyGroup>
 
   <ItemGroup>
