--- a/OSRS.Dotnet.Tools.csproj
+++ b/OSRS.Dotnet.Tools.csproj
@@ -7,6 +7,7 @@
     <OutputType>Library</OutputType>
     <Title>OSRS.Dotnet.Tools</Title>
     <Authors>JustinRidings</Authors>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
